--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="/coffeenie">coffeenie (개인 포폴)</a></li>
             <li><a href="/espoir">espoir (개인 포폴)</a></li>
             <li><a href="/andbag">and bag (개인 포폴)</a></li>
+            <li><a href="/andbag">and bag (개인 포폴)</a></li>
         </ul>
     </div>
 </body>
