--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 -->
             <li><a href="/coffeenie">coffeenie (개인 포폴)</a></li>
             <li><a href="/espoir">espoir (개인 포폴)</a></li>
-            <li><a href="/andbag/index.html">and bag (개인 포폴)</a></li>
+            <li><a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a></li>
         </ul>
     </div>
 </body>
