--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <li><a href="/web_standard">웹 표준 (WEB STANDARD)</a></li>
             <li><a href="/responsive_web">반응형 웹 (RESPONSIVE WEB)</a></li>
 -->
-            <li><a href="/coffeenie">coffeenie (개인 포폴)</a></li>
-            <li><a href="/espoir">espoir (개인 포폴)</a></li>
+            <li><a href="https://ksysky.github.io/portfolio/coffeenie/index.html">coffeenie (개인 포폴)</a></li>
+            <li><a href="https://ksysky.github.io/portfolio/espoir/index.html">espoir (개인 포폴)</a></li>
             <li><a href="https://ksysky.github.io/portfolio/andbag/index.html">and bag (개인 포폴)</a></li>
         </ul>
     </div>
