--- a/andbag/index.html
+++ b/andbag/index.html
@@ -133,7 +133,7 @@
     </header>
     <!-- //header -->
 
-    <section id="banner1">
+    <div id="banner1">
         <div class="swiper-container banner1">
             <div class="swiper-wrapper">
                 <!-- Slides -->
@@ -150,10 +150,10 @@
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-    </section>
+    </div>
     <!-- //banner1 -->
 
-    <section id="main_slide">
+    <div id="main_slide">
         <div class="container">
             <div class="row">
                 <div class="main_slide">
@@ -472,7 +472,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- //main slide -->
 
     <section id="banner2">
