--- a/espoir/index.html
+++ b/espoir/index.html
@@ -17,209 +17,215 @@
 	<header id="header">
 		<div class="header_nav">
 			<div class="container">
-				<ul>
-					<li><a href="#">리뷰보드</a></li>
-					<li class="login"><a href="#">로그인</a></li>
-					<li><a href="#">회원가입</a></li>
-					<li class="lang">
-						<button class="btn">KOR</button>
-						<div class="lang_select">
-							<ul class="clearfix">
-								<li><a href="#">KOR</a></li>
-								<li><a href="#">ENG</a></li>
-							</ul>
-						</div>
-					</li>
-				</ul>
+				<div class="row">
+					<ul>
+						<li><a href="#">리뷰보드</a></li>
+						<li class="login"><a href="#">로그인</a></li>
+						<li><a href="#">회원가입</a></li>
+						<li class="lang">
+							<button class="btn">KOR</button>
+							<div class="lang_select">
+								<ul class="clearfix">
+									<li><a href="#">KOR</a></li>
+									<li><a href="#">ENG</a></li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<!-- //탑 헤더 -->
 
 		<div class="logo_nav">
 			<div class="container">
-				<h1 class="logo">
-					<a href="#"><img src="img/logo.gif" alt="에스쁘아"></a>
-				</h1>
-				<!-- //logo -->
-
-				<nav class="nav">
-					<ul class="clearfix">
-						<li class="menu">
-							<a href="#">NEW &amp; BEST</a>
+				<div class="row">
+					<div class="header_flex">
+						<nav class="nav">
 							<ul class="clearfix">
-								<li><a href="#">신제품</a></li>
-								<li><a href="#">컬렉션</a></li>
-								<li><a href="#">베스트</a></li>
-								<li><a href="#">어워드 위너</a></li>
-								<li><a href="#">룩북</a></li>
-							</ul>
-						</li>
-						<li class="menu">
-							<a href="#">SHOP</a>
-							<ul class="clearfix">
-								<li><a href="#">페이스</a></li>
-								<li><a href="#">립</a></li>
-								<li><a href="#">아이</a></li>
-								<li><a href="#">치크</a></li>
-								<li><a href="#">스킨케어</a></li>
-								<li><a href="#">툴</a></li>
-							</ul>
-							<ul class="clearfix mini">
-								<li><a href="#">핸드메이드 립 &amp; 파우더</a></li>
-								<li><a href="#">스페셜세트</a></li>
-								<li><a href="#">라스트찬스</a></li>
-							</ul>
-						</li>
-						<li class="menu">
-							<a href="#">EVENT</a>
-						</li>
-						<li class="menu">
-							<a href="#">SERVICE</a>
-							<ul class="clearfix">
-								<li><a href="#">프라이빗 메이크업 레슨</a></li>
-								<li><a href="#">아이브로우바</a></li>
-								<li><a href="#">고객센터</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
-				<!-- //nav -->
-
-				<div class="nav_right">
-					<div class="search_box">
-						<div class="search_area">
-							<button class="search_icon">검색</button>
-							<input type="text" placeholder="SEARCH">
-							<button class="close_icon">닫기</button>
-						</div>
-						<div class="search_pop">
-							<dl class="dl_1">
-								<dt class="tit">최근 검색어</dt>
-								<dd class="word">최근 검색한 내역이 없습니다.</dd>
-							</dl>
-							<dl class="dl_2">
-								<dt class="tit">인기 검색어</dt>
-								<dd class="word">
+								<li class="menu">
+									<a href="#">NEW &amp; BEST</a>
 									<ul class="clearfix">
-										<li><a href="#">쿠션</a></li>
+										<li><a href="#">신제품</a></li>
+										<li><a href="#">컬렉션</a></li>
+										<li><a href="#">베스트</a></li>
+										<li><a href="#">어워드 위너</a></li>
+										<li><a href="#">룩북</a></li>
+									</ul>
+								</li>
+								<li class="menu">
+									<a href="#">SHOP</a>
+									<ul class="clearfix">
+										<li><a href="#">페이스</a></li>
 										<li><a href="#">립</a></li>
-										<li><a href="#">파운데이션</a></li>
-										<li><a href="#">섀도우</a></li>
-										<li><a href="#">비실크</a></li>
-										<li><a href="#">선크림</a></li>
-										<li><a href="#">테이핑</a></li>
-										<li><a href="#">비글로우</a></li>
-										<li><a href="#">퍼프</a></li>
-										<li><a href="#">아이라이너</a></li>
+										<li><a href="#">아이</a></li>
+										<li><a href="#">치크</a></li>
+										<li><a href="#">스킨케어</a></li>
+										<li><a href="#">툴</a></li>
 									</ul>
-								</dd>
-							</dl>
-							<dl class="dl_3">
-								<dt class="tit">컬러로 검색</dt>
-								<dd class="color_chart">
-									<ul>
-										<li>
-											<a href="#"><span style="background: #ffd700;"></span></a>
-											<p>골드</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #808080;"></span></a>
-											<p>그레이</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #008000;"></span></a>
-											<p>그린</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #336666;"></span></a>
-											<p>네이비</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #E6E6FA;"></span></a>
-											<p>라벤더</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FF0000;"></span></a>
-											<p>레드</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #F361A6;"></span></a>
-											<p>로즈</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #99FFF8;"></span></a>
-											<p>민트</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FAE0D4;"></span></a>
-											<p>베이지</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #A52A2A;"></span></a>
-											<p>브라운</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #000000;"></span></a>
-											<p>블랙</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #0070DF;"></span></a>
-											<p>블루</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #C0C0C0;"></span></a>
-											<p>실버</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFFF00;"></span></a>
-											<p>옐로우</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFA500;"></span></a>
-											<p>오렌지</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #F0E68C;"></span></a>
-											<p>카키</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #800080;"></span></a>
-											<p>퍼플</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFC19E;"></span></a>
-											<p>피치</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFA7A7;"></span></a>
-											<p>코랄</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFC0CB;"></span></a>
-											<p>핑크</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #F8F8F8;"></span></a>
-											<p>화이트</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #FFF2E6;"></span></a>
-											<p>누드</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #B42233;"></span></a>
-											<p>와인</p>
-										</li>
-										<li>
-											<a href="#"><span style="background: #BD4A44;"></span></a>
-											<p>MLBB</p>
-										</li>
+									<ul class="clearfix mini">
+										<li><a href="#">핸드메이드 립 &amp; 파우더</a></li>
+										<li><a href="#">스페셜세트</a></li>
+										<li><a href="#">라스트찬스</a></li>
 									</ul>
-								</dd>
-							</dl>
+								</li>
+								<li class="menu">
+									<a href="#">EVENT</a>
+								</li>
+								<li class="menu">
+									<a href="#">SERVICE</a>
+									<ul class="clearfix">
+										<li><a href="#">프라이빗 메이크업 레슨</a></li>
+										<li><a href="#">아이브로우바</a></li>
+										<li><a href="#">고객센터</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
+						<!-- //nav -->
+	
+						<div class="logo">
+							<a href="#"><img src="img/logo.gif" alt="에스쁘아"></a>
 						</div>
-						<div class="basket">
-							<a href="#"><span>0</span></a>
+						<!-- //logo -->
+		
+						<div class="nav_right">
+							<div class="search_box">
+								<div class="search_area">
+									<button class="search_icon">검색</button>
+									<input type="text" placeholder="SEARCH">
+									<button class="close_icon">닫기</button>
+								</div>
+								<div class="search_pop">
+									<dl class="dl_1">
+										<dt class="tit">최근 검색어</dt>
+										<dd class="word">최근 검색한 내역이 없습니다.</dd>
+									</dl>
+									<dl class="dl_2">
+										<dt class="tit">인기 검색어</dt>
+										<dd class="word">
+											<ul class="clearfix">
+												<li><a href="#">쿠션</a></li>
+												<li><a href="#">립</a></li>
+												<li><a href="#">파운데이션</a></li>
+												<li><a href="#">섀도우</a></li>
+												<li><a href="#">비실크</a></li>
+												<li><a href="#">선크림</a></li>
+												<li><a href="#">테이핑</a></li>
+												<li><a href="#">비글로우</a></li>
+												<li><a href="#">퍼프</a></li>
+												<li><a href="#">아이라이너</a></li>
+											</ul>
+										</dd>
+									</dl>
+									<dl class="dl_3">
+										<dt class="tit">컬러로 검색</dt>
+										<dd class="color_chart">
+											<ul>
+												<li>
+													<a href="#"><span style="background: #ffd700;"></span></a>
+													<p>골드</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #808080;"></span></a>
+													<p>그레이</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #008000;"></span></a>
+													<p>그린</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #336666;"></span></a>
+													<p>네이비</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #E6E6FA;"></span></a>
+													<p>라벤더</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FF0000;"></span></a>
+													<p>레드</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #F361A6;"></span></a>
+													<p>로즈</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #99FFF8;"></span></a>
+													<p>민트</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FAE0D4;"></span></a>
+													<p>베이지</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #A52A2A;"></span></a>
+													<p>브라운</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #000000;"></span></a>
+													<p>블랙</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #0070DF;"></span></a>
+													<p>블루</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #C0C0C0;"></span></a>
+													<p>실버</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFFF00;"></span></a>
+													<p>옐로우</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFA500;"></span></a>
+													<p>오렌지</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #F0E68C;"></span></a>
+													<p>카키</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #800080;"></span></a>
+													<p>퍼플</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFC19E;"></span></a>
+													<p>피치</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFA7A7;"></span></a>
+													<p>코랄</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFC0CB;"></span></a>
+													<p>핑크</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #F8F8F8;"></span></a>
+													<p>화이트</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #FFF2E6;"></span></a>
+													<p>누드</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #B42233;"></span></a>
+													<p>와인</p>
+												</li>
+												<li>
+													<a href="#"><span style="background: #BD4A44;"></span></a>
+													<p>MLBB</p>
+												</li>
+											</ul>
+										</dd>
+									</dl>
+								</div>
+							</div>
+							<div class="basket">
+								<a href="#"><span>0</span></a>
+							</div>
 						</div>
 					</div>
 				</div>
