--- a/espoir/index.html
+++ b/espoir/index.html
@@ -53,7 +53,7 @@
 										<li><a href="#">룩북</a></li>
 									</ul>
 								</li>
-								<li class="menu">
+								<li class="menu two">
 									<a href="#">SHOP</a>
 									<ul class="clearfix">
 										<li><a href="#">페이스</a></li>
