--- a/espoir/index.html
+++ b/espoir/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>에스쁘아</title>
 
 	<link rel="stylesheet" href="css/style.css">
@@ -53,7 +54,7 @@
 										<li><a href="#">룩북</a></li>
 									</ul>
 								</li>
-								<li class="menu two">
+								<li class="menu">
 									<a href="#">SHOP</a>
 									<ul class="clearfix">
 										<li><a href="#">페이스</a></li>
@@ -63,13 +64,8 @@
 										<li><a href="#">스킨케어</a></li>
 										<li><a href="#">툴</a></li>
 									</ul>
-									<ul class="clearfix mini">
-										<li><a href="#">핸드메이드 립 &amp; 파우더</a></li>
-										<li><a href="#">스페셜세트</a></li>
-										<li><a href="#">라스트찬스</a></li>
-									</ul>
 								</li>
-								<li class="menu">
+								<li class="menu event_menu">
 									<a href="#">EVENT</a>
 								</li>
 								<li class="menu">
@@ -82,6 +78,7 @@
 								</li>
 							</ul>
 						</nav>
+						<div class="nav_back"></div>
 						<!-- //nav -->
 	
 						<div class="logo">
