header menu edit

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -225,6 +225,13 @@
 							</div>
 						</div>
 					</div>
+					<nav class="m_nav">
+						<a href="#" class="icon_space">
+							<span></span>
+							<span></span>
+							<span></span>
+						</a>
+					</nav>
 				</div>
 			</div>
 		</div>
