--- a/espoir/index.html
+++ b/espoir/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
 	<title>에스쁘아</title>
 
 	<link rel="stylesheet" href="css/style.css">
