--- a/espoir/index.html
+++ b/espoir/index.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<!-- //CSS 설정 -->
 
-	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
+		rel="stylesheet">
 </head>
 
 <body>
@@ -80,12 +81,12 @@
 						</nav>
 						<div class="nav_back"></div>
 						<!-- //nav -->
-	
+
 						<div class="logo">
 							<a href="#"><img src="img/logo.gif" alt="에스쁘아"></a>
 						</div>
 						<!-- //logo -->
-		
+
 						<div class="nav_right">
 							<div class="search_box">
 								<div class="search_area">
@@ -302,100 +303,102 @@
 
 	<section id="best">
 		<div class="container">
-			<h2 class="top_tit">BEST SELLER</h2>
-			<div class="list1 con">
-				<ul class="clearfix">
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_1.png" alt="베스트셀러1">
-								<span class="sale">25%</span>
-							</a>
-						</div>
-						<div class="hash">#벨벳매트 #MLBB</div>
-						<div class="pro_name">NEW 꾸뛰르 립 플루이드 벨벳</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_2.png" alt="베스트셀러2">
-								<span class="sale">25%</span>
-							</a>
-						</div>
-						<div class="hash">#실크페이스 #수부지인생쿠션</div>
-						<div class="pro_name">[미니파데&amp;케이스증정]프로 테일러 비 실크 쿠션 SPF42 PA++</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_3.png" alt="베스트셀러3">
-								<span class="sale">20%</span>
-							</a>
-						</div>
-						<div class="hash">#실크페이스 #24시간지속</div>
-						<div class="pro_name">[브러쉬증정]NEW 프로 테일러 파운데이션 비 실크 SPF34 PA++</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_4.png" alt="베스트셀러4">
-								<span class="sale">23%</span>
-							</a>
-						</div>
-						<div class="hash">#벨벳매트 #MLBB</div>
-						<div class="pro_name">[미니파데&amp;케이스증정]프로 테일러 비 글로우 쿠션 SPF42 PA++</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_5.png" alt="베스트셀러5">
-								<span class="sale">10%</span>
-							</a>
-						</div>
-						<div class="hash">#풀메팔레트 #데일리팔레트</div>
-						<div class="pro_name">리얼 아이 팔레트</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/best_seller_6.png" alt="베스트셀러6">
-								<span class="sale">25%</span>
-							</a>
-						</div>
-						<div class="hash">#수분폭탄 #생기톤업</div>
-						<div class="pro_name">워터 스플래쉬 선크림 SPF50+ PA+++ 60ml</div>
-						<ul class="box_bottom">
-							<li class="del"><span>&#92; 19,000</span></li>
-							<li class="price"><span>&#92; 14,250</span></li>
-							<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
-						</ul>
-					</li>
-				</ul>
+			<div class="row">
+				<h2 class="top_tit">BEST SELLER</h2>
+				<div class="list1 con">
+					<ul class="clearfix">
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_1.png" alt="베스트셀러1">
+									<span class="sale">25%</span>
+								</a>
+							</div>
+							<div class="hash">#벨벳매트 #MLBB</div>
+							<div class="pro_name">NEW 꾸뛰르 립 플루이드 벨벳</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_2.png" alt="베스트셀러2">
+									<span class="sale">25%</span>
+								</a>
+							</div>
+							<div class="hash">#실크페이스 #수부지인생쿠션</div>
+							<div class="pro_name">[미니파데&amp;케이스증정]프로 테일러 비 실크 쿠션 SPF42 PA++</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_3.png" alt="베스트셀러3">
+									<span class="sale">20%</span>
+								</a>
+							</div>
+							<div class="hash">#실크페이스 #24시간지속</div>
+							<div class="pro_name">[브러쉬증정]NEW 프로 테일러 파운데이션 비 실크 SPF34 PA++</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_4.png" alt="베스트셀러4">
+									<span class="sale">23%</span>
+								</a>
+							</div>
+							<div class="hash">#벨벳매트 #MLBB</div>
+							<div class="pro_name">[미니파데&amp;케이스증정]프로 테일러 비 글로우 쿠션 SPF42 PA++</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_5.png" alt="베스트셀러5">
+									<span class="sale">10%</span>
+								</a>
+							</div>
+							<div class="hash">#풀메팔레트 #데일리팔레트</div>
+							<div class="pro_name">리얼 아이 팔레트</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/best_seller_6.png" alt="베스트셀러6">
+									<span class="sale">25%</span>
+								</a>
+							</div>
+							<div class="hash">#수분폭탄 #생기톤업</div>
+							<div class="pro_name">워터 스플래쉬 선크림 SPF50+ PA+++ 60ml</div>
+							<ul class="box_bottom">
+								<li class="del"><span>&#92; 19,000</span></li>
+								<li class="price"><span>&#92; 14,250</span></li>
+								<li class="basket"><img src="img/btn_bsk.gif" alt="장바구니 담기"></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="bottom_btn">
@@ -419,7 +422,9 @@
 						<div class="review_box">
 							<div class="star"></div>
 							<div class="review_letter">
-								메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘 가려지더라고요 에스쁘아에서 나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요 부드러운 초극세사 모가 얼마나 부드...
+								메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘 가려지더라고요
+								에스쁘아에서 나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요 부드러운 초극세사 모가 얼마나
+								부드...
 							</div>
 							<div class="review_popup click_1"><a href="#">자세히보기</a></div>
 							<div class="reviewer_id">zkdlxh0***</div>
@@ -437,7 +442,8 @@
 						<div class="review_box">
 							<div class="star"></div>
 							<div class="review_letter">
-								메트보단 촉촉립을 좋아해서 사봤는데 립자체 색보다 꽤 여리하게 발색이 되서 자연스럽고 너무 예뻐요!! 양조절에 따라서 여러컬러로 표현되구요 근래 산 립중에 제일 만족해요! 썬릿이랑 포기비치도 오프라인에서 테스트해보고 너무 이뻐서 추가주문해서 기다리는중입니다!
+								메트보단 촉촉립을 좋아해서 사봤는데 립자체 색보다 꽤 여리하게 발색이 되서 자연스럽고 너무 예뻐요!! 양조절에 따라서 여러컬러로 표현되구요 근래 산 립중에
+								제일 만족해요! 썬릿이랑 포기비치도 오프라인에서 테스트해보고 너무 이뻐서 추가주문해서 기다리는중입니다!
 							</div>
 							<div class="reviewer_id">jobssar***</div>
 							<div class="date">2020.01.13</div>
@@ -454,7 +460,8 @@
 						<div class="review_box">
 							<div class="star"></div>
 							<div class="review_letter">
-								진짜 컬러 너무 이뻐요 요즘 팔레트들 다 똑같은 케이스에 들어있고 컬러도 비슷비슷해서 잘 안사는데 이건 안살수가 없잖아요ㅠㅠㅠ 쉐딩 블러셔도 너무 이뻐요 그래서 누드 팔레트도 시켜서 기다리는중입니다 발색도 굿굿 다들 어서 사세요... 최강 진짜 찐팔레트입니다
+								진짜 컬러 너무 이뻐요 요즘 팔레트들 다 똑같은 케이스에 들어있고 컬러도 비슷비슷해서 잘 안사는데 이건 안살수가 없잖아요ㅠㅠㅠ 쉐딩 블러셔도 너무 이뻐요
+								그래서 누드 팔레트도 시켜서 기다리는중입니다 발색도 굿굿 다들 어서 사세요... 최강 진짜 찐팔레트입니다
 							</div>
 							<div class="reviewer_id">wlal***</div>
 							<div class="date">2020.01.28</div>
@@ -572,9 +579,13 @@
 					</ul>
 					<div class="address">
 						<p>(주)에스쁘아 대표이사: 임중식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;본사 : 서울특별시 용산구 한강대로 100 (한강로2가) 6층</p>
-						<p>사업자번호: 104-86-58598&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고번호 : 제 2017-서울용산-1293호&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="check">사업자정보확인</a></p>
-						<p>개인정보보호책임자: 하태식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;고객상담: 080-619-8888&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일: espoirmall@espoir.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;호스팅제공자 : ㈜에스쁘아</p>
-						<p>고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 이니시스 구매안전 서비스(에스크로)를 이용하실 수 있습니다.&nbsp;&nbsp;<a href="#" class="check">서비스 가입사실 확인</a></p>
+						<p>사업자번호: 104-86-58598&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고번호 : 제
+							2017-서울용산-1293호&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="check">사업자정보확인</a></p>
+						<p>개인정보보호책임자: 하태식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;고객상담:
+							080-619-8888&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일:
+							espoirmall@espoir.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;호스팅제공자 : ㈜에스쁘아</p>
+						<p>고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 이니시스 구매안전 서비스(에스크로)를 이용하실 수 있습니다.&nbsp;&nbsp;<a
+								href="#" class="check">서비스 가입사실 확인</a></p>
 						<p class="copy">Copyright ⓒ 2018 espoir. All Rights Reserved.</p>
 					</div>
 				</div>
@@ -607,9 +618,14 @@
 				<dl>
 					<dt>메이크업을 할 때 브러쉬를 사용하시는 편이신가요?</dt>
 					<dd>
-						메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘 가려지더라고요 에스쁘아에서 나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요,
-						부드러운 초극세사 모가 얼마나 부드럽겠어? 하는 마음으로 만지는 순간 진짜 엄청나게 부드럽더라고요 마치 솜털 같은 기분이랄까요? 0.001mm 초 극세사 모라고 하는데 어마어마하죠? 솜털 같은 브러쉬라 파운데이션 결도 적게 남고 매끄럽게 발리더라고요 모공 프라이머를 사용하지 않았는데도 모공이 다 커버 되더라고요 코 모공도 세밀하게 터치가 가능해서 쉽게 슥슥 커버가 되었어요 결 자국은 브러쉬를 톡톡 두드려주면 자연스럽게 사라지지만 만약 결 자국이 신경 쓰이시다면 퍼프로 한 번 더 팡팡 두드려주면 피부에 착하고 밀착돼요 브러쉬가 피부에 닿았을 때도 전혀 따갑지 않고 부드러워서 피부가 민감하신 분들도 쓰기 좋을 것 같아요
-						에스쁘아 수퍼 소프트 페이스 브러쉬 하나면 모공 프라이머 없이 모공 커버를 할 수 있어서 너무 만족스러워요 피부에 부드럽게 모공을 커버하고 싶다면 에스쁘아 수퍼 소프트 페이스 브러쉬를 추천해요!
+						메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘 가려지더라고요 에스쁘아에서
+						나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요,
+						부드러운 초극세사 모가 얼마나 부드럽겠어? 하는 마음으로 만지는 순간 진짜 엄청나게 부드럽더라고요 마치 솜털 같은 기분이랄까요? 0.001mm 초 극세사 모라고 하는데
+						어마어마하죠? 솜털 같은 브러쉬라 파운데이션 결도 적게 남고 매끄럽게 발리더라고요 모공 프라이머를 사용하지 않았는데도 모공이 다 커버 되더라고요 코 모공도 세밀하게 터치가
+						가능해서 쉽게 슥슥 커버가 되었어요 결 자국은 브러쉬를 톡톡 두드려주면 자연스럽게 사라지지만 만약 결 자국이 신경 쓰이시다면 퍼프로 한 번 더 팡팡 두드려주면 피부에 착하고
+						밀착돼요 브러쉬가 피부에 닿았을 때도 전혀 따갑지 않고 부드러워서 피부가 민감하신 분들도 쓰기 좋을 것 같아요
+						에스쁘아 수퍼 소프트 페이스 브러쉬 하나면 모공 프라이머 없이 모공 커버를 할 수 있어서 너무 만족스러워요 피부에 부드럽게 모공을 커버하고 싶다면 에스쁘아 수퍼 소프트
+						페이스 브러쉬를 추천해요!
 						리뷰 읽어주셔서 감사합니다
 					</dd>
 				</dl>
