real review edit

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -408,66 +408,73 @@
 
 	<section id="review">
 		<div class="container">
-			<h2 class="top_tit">REAL REVIEW</h2>
-			<div class="list2 con">
-				<ul class="clearfix">
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/real_review_1.png" alt="리얼리뷰1">
-								<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
-							</a>
-							<span class="tit_s">수퍼 소프트 페이스 브러쉬</span>
-						</div>
-						<div class="review_box">
-							<div class="star"></div>
-							<div class="review_letter">
-								메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘 가려지더라고요
-								에스쁘아에서 나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요 부드러운 초극세사 모가 얼마나
-								부드...
+			<div class="row">
+				<h2 class="top_tit">REAL REVIEW</h2>
+				<div class="list2 con">
+					<ul class="clearfix">
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/real_review_1.png" alt="리얼리뷰1">
+									<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
+								</a>
+								<span class="tit_s">수퍼 소프트 페이스 브러쉬</span>
 							</div>
-							<div class="review_popup click_1"><a href="#">자세히보기</a></div>
-							<div class="reviewer_id">zkdlxh0***</div>
-							<div class="date">2020.01.13</div>
-						</div>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/real_review_2.png" alt="리얼리뷰2">
-								<a class="tit" href="#">노웨어 모이스트 허그</a>
-							</a>
-							<span class="tit_s">브리스크</span>
-						</div>
-						<div class="review_box">
-							<div class="star"></div>
-							<div class="review_letter">
-								메트보단 촉촉립을 좋아해서 사봤는데 립자체 색보다 꽤 여리하게 발색이 되서 자연스럽고 너무 예뻐요!! 양조절에 따라서 여러컬러로 표현되구요 근래 산 립중에
-								제일 만족해요! 썬릿이랑 포기비치도 오프라인에서 테스트해보고 너무 이뻐서 추가주문해서 기다리는중입니다!
+							<div class="review_box">
+								<div class="star"></div>
+								<div class="review_letter">
+									메이크업을 할 때 브러쉬를 사용하는 편이신가요? 저는 필수로 사용하고 있는데요 모공 부자인 저는 모공 브러쉬로 메이크업을 해야 모공이 샥샥 잘
+									가려지더라고요
+									에스쁘아에서 나온 브러쉬는 초극세사 모의 강아지를 쓰다듬는 느낌의 보들보들한 감촉의 함성 모의 일명 댕댕이 브러쉬를 써봤는데요 부드러운 초극세사 모가
+									얼마나
+									부드...
+								</div>
+								<div class="review_popup click_1"><a href="#">자세히보기</a></div>
+								<div class="reviewer_id">zkdlxh0***</div>
+								<div class="date">2020.01.13</div>
+								<div class="review_img"><span class="ir_so">리뷰 이미지</span></div>
 							</div>
-							<div class="reviewer_id">jobssar***</div>
-							<div class="date">2020.01.13</div>
-						</div>
-					</li>
-					<li class="cell">
-						<div class="img-box">
-							<a href="#">
-								<img src="img/real_review_3.png" alt="리얼리뷰3">
-								<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
-							</a>
-							<span class="tit_s">피치 라이크</span>
-						</div>
-						<div class="review_box">
-							<div class="star"></div>
-							<div class="review_letter">
-								진짜 컬러 너무 이뻐요 요즘 팔레트들 다 똑같은 케이스에 들어있고 컬러도 비슷비슷해서 잘 안사는데 이건 안살수가 없잖아요ㅠㅠㅠ 쉐딩 블러셔도 너무 이뻐요
-								그래서 누드 팔레트도 시켜서 기다리는중입니다 발색도 굿굿 다들 어서 사세요... 최강 진짜 찐팔레트입니다
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/real_review_2.png" alt="리얼리뷰2">
+									<a class="tit" href="#">노웨어 모이스트 허그</a>
+								</a>
+								<span class="tit_s">브리스크</span>
 							</div>
-							<div class="reviewer_id">wlal***</div>
-							<div class="date">2020.01.28</div>
-						</div>
-					</li>
-				</ul>
+							<div class="review_box">
+								<div class="star"></div>
+								<div class="review_letter">
+									메트보단 촉촉립을 좋아해서 사봤는데 립자체 색보다 꽤 여리하게 발색이 되서 자연스럽고 너무 예뻐요!! 양조절에 따라서 여러컬러로 표현되구요 근래 산
+									립중에
+									제일 만족해요! 썬릿이랑 포기비치도 오프라인에서 테스트해보고 너무 이뻐서 추가주문해서 기다리는중입니다!
+								</div>
+								<div class="reviewer_id">jobssar***</div>
+								<div class="date">2020.01.13</div>
+							</div>
+						</li>
+						<li class="cell">
+							<div class="img-box">
+								<a href="#">
+									<img src="img/real_review_3.png" alt="리얼리뷰3">
+									<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
+								</a>
+								<span class="tit_s">피치 라이크</span>
+							</div>
+							<div class="review_box">
+								<div class="star"></div>
+								<div class="review_letter">
+									진짜 컬러 너무 이뻐요 요즘 팔레트들 다 똑같은 케이스에 들어있고 컬러도 비슷비슷해서 잘 안사는데 이건 안살수가 없잖아요ㅠㅠㅠ 쉐딩 블러셔도 너무
+									이뻐요
+									그래서 누드 팔레트도 시켜서 기다리는중입니다 발색도 굿굿 다들 어서 사세요... 최강 진짜 찐팔레트입니다
+								</div>
+								<div class="reviewer_id">wlal***</div>
+								<div class="date">2020.01.28</div>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="bottom_btn">
 				<a href="#" class="viewmore">VIEW MORE</a>
