look book slide edit 1

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -513,7 +513,6 @@
 							<span>인텐스 블랙</span>
 							<a href="#">more</a>
 						</div>
-
 					</div>
 					<div class="txt_box">PEACHY LIKE LOOK</div>
 				</li>
@@ -526,13 +525,58 @@
 			</ul>
 			<div class="lookbook_m">
 				<div class="look1">
-					<img src="../img/IMG1578CrI293768553.jpg" alt="">
+					<div class="look_img">
+						<img src="../img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
+						<span>PEACHY LIKE LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
+							<span>피치 라이크</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
 				</div>
 				<div class="look2">
-					<img src="../img/IMG1578MYo294232008.jpg" alt="">
+					<div class="look_img">
+						<img src="../img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
+						<span>ROSY FEED LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
+							<span>피치 라이크</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
 				</div>
 				<div class="look3">
-					<img src="../img/IMG1578MYo294232008.jpg" alt="">
+					<div class="look_img">
+						<img src="../img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
+						<span>NUDE MOOD LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
+							<span>피치 라이크</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
