look book slide edit  3

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -489,7 +489,7 @@
 			<div class="look_book_bottom_btn">
 				<a href="#" class="viewmore">VIEW MORE</a>
 			</div>
-			<ul class="look_book_box clearfix">
+			<!-- <ul class="look_book_box clearfix">
 				<li class="box1">
 					<div class="img_box">
 						<img src="img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK">
@@ -522,16 +522,16 @@
 					</div>
 					<div class="txt_box">ROSY FEED LOOK</div>
 				</li>
-			</ul>
+			</ul> -->
 			<div class="lookbook_m">
-				<div class="look1">
+				<div class="look">
 					<div class="look_img">
 						<img src="../img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
 						<span>PEACHY LIKE LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
+							<img src="../img/peach_like.png" alt="피치 라이크">
 							<span>피치 라이크</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -542,14 +542,50 @@
 						</div>
 					</div>
 				</div>
-				<div class="look2">
+				<div class="look">
 					<div class="look_img">
 						<img src="../img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
 						<span>ROSY FEED LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
+							<img src="../img/rosy_feed.png" alt="로지 피드">
+							<span>로지 피드</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
+				</div>
+				<div class="look">
+					<div class="look_img">
+						<img src="../img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
+						<span>NUDE MOOD LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/nude_mood.png" alt="누드 무드">
+							<span>누드 무드</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
+				</div>
+				<div class="look">
+					<div class="look_img">
+						<img src="../img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
+						<span>PEACHY LIKE LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/peach_like.png" alt="피치 라이크">
 							<span>피치 라이크</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -560,15 +596,33 @@
 						</div>
 					</div>
 				</div>
-				<div class="look3">
+				<div class="look">
+					<div class="look_img">
+						<img src="../img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
+						<span>ROSY FEED LOOK</span>
+					</div>
+					<div class="look_product">
+						<div class="product_1">
+							<img src="../img/rosy_feed.png" alt="로지 피드">
+							<span>로지 피드</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+						<div class="product_2">
+							<img src="../img/liner.png" alt="인텐스 블랙">
+							<span>인텐스 블랙</span>
+							<a href="#" class="click">바로가기</a>
+						</div>
+					</div>
+				</div>
+				<div class="look">
 					<div class="look_img">
 						<img src="../img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
 						<span>NUDE MOOD LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/IMG1590ztK977777521_320.png" alt="피치 라이크">
-							<span>피치 라이크</span>
+							<img src="../img/nude_mood.png" alt="누드 무드">
+							<span>누드 무드</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
