look book img html code edit

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -526,17 +526,17 @@
 			<div class="lookbook_m">
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
+						<img src="img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
 						<span>PEACHY LIKE LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/peach_like.png" alt="피치 라이크">
+							<img src="img/peach_like.png" alt="피치 라이크">
 							<span>피치 라이크</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -544,17 +544,17 @@
 				</div>
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
+						<img src="img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
 						<span>ROSY FEED LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/rosy_feed.png" alt="로지 피드">
+							<img src="img/rosy_feed.png" alt="로지 피드">
 							<span>로지 피드</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -562,17 +562,17 @@
 				</div>
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
+						<img src="img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
 						<span>NUDE MOOD LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/nude_mood.png" alt="누드 무드">
+							<img src="img/nude_mood.png" alt="누드 무드">
 							<span>누드 무드</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -580,17 +580,17 @@
 				</div>
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
+						<img src="img/IMG1578CrI293768553.jpg" alt="PEACHY LIKE LOOK 이미지">
 						<span>PEACHY LIKE LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/peach_like.png" alt="피치 라이크">
+							<img src="img/peach_like.png" alt="피치 라이크">
 							<span>피치 라이크</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -598,17 +598,17 @@
 				</div>
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
+						<img src="img/IMG1578iox296725083.png" alt="ROSY FEED LOOK 이미지">
 						<span>ROSY FEED LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/rosy_feed.png" alt="로지 피드">
+							<img src="img/rosy_feed.png" alt="로지 피드">
 							<span>로지 피드</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
@@ -616,17 +616,17 @@
 				</div>
 				<div class="look">
 					<div class="look_img">
-						<img src="../img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
+						<img src="img/IMG1578MYo294232008.jpg" alt="NUDE MOOD LOOK 이미지">
 						<span>NUDE MOOD LOOK</span>
 					</div>
 					<div class="look_product">
 						<div class="product_1">
-							<img src="../img/nude_mood.png" alt="누드 무드">
+							<img src="img/nude_mood.png" alt="누드 무드">
 							<span>누드 무드</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
 						<div class="product_2">
-							<img src="../img/liner.png" alt="인텐스 블랙">
+							<img src="img/liner.png" alt="인텐스 블랙">
 							<span>인텐스 블랙</span>
 							<a href="#" class="click">바로가기</a>
 						</div>
