--- a/espoir/index.html
+++ b/espoir/index.html
@@ -650,71 +650,72 @@
 
 	<footer id="footer">
 		<div class="container">
-			<div class="top_foot clearfix">
-				<div class="tf_1">
-					<a href="#">
-						<dl>
-							<dt>MAKEUP</dt>
-							<dd>ARTIST LIVECHAT</dd>
-						</dl>
-					</a>
-					<p>라이브 챗으로 메이크업 고민을 <br>아티스트와 상담하세요!</p>
-				</div>
-				<div class="tf_2">
-					<a href="#">
-						<dl>
-							<dt>고객센터</dt>
-							<dd>080 619 8888</dd>
-						</dl>
-					</a>
-					<p class="time">상담시간 09:00 ~ 18:00</p>
-					<p>(월~금, 공휴일 제외)</p>
-				</div>
-				<div class="tf_3">
-					<ul class="menu">
-						<li><a href="#">매장 찾기</a></li>
-						<li><a href="#">브랜드 소개</a></li>
-						<li><a href="#">멤버십</a></li>
-						<li><a href="#">사이트맵</a></li>
-					</ul>
-					<ul class="login clearfix">
-						<li><a href="#">로그인</a></li>
-						<li><a href="#">회원가입</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="bottom_foot clearfix">
-				<div class="bf bf_left">
-					<ul class="bf_menu">
-						<li><a href="#">서비스 이용약관</a></li>
-						<li class="bold"><a href="#">개인정보처리방침</a></li>
-						<li><a href="#">영상기기 관리방침</a></li>
-						<li><a href="#">사업자 정보 확인</a></li>
-						<li><a href="#">이메일 무단수집 거부</a></li>
-						<li><a href="#">전자공고</a></li>
-					</ul>
-					<div class="address">
-						<p>(주)에스쁘아 대표이사: 임중식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;본사 : 서울특별시 용산구 한강대로 100 (한강로2가) 6층</p>
-						<p>사업자번호: 104-86-58598&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고번호 : 제
-							2017-서울용산-1293호&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="check">사업자정보확인</a></p>
-						<p>개인정보보호책임자: 하태식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;고객상담:
-							080-619-8888&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일:
-							espoirmall@espoir.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;호스팅제공자 : ㈜에스쁘아</p>
-						<p>고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 이니시스 구매안전 서비스(에스크로)를 이용하실 수 있습니다.&nbsp;&nbsp;<a
-								href="#" class="check">서비스 가입사실 확인</a></p>
-						<p class="copy">Copyright ⓒ 2018 espoir. All Rights Reserved.</p>
+			<div class="row">
+				<div class="top_foot clearfix">
+					<div class="tf_1">
+						<a href="#">
+							<dl>
+								<dt>MAKEUP</dt>
+								<dd>ARTIST LIVECHAT</dd>
+							</dl>
+						</a>
+						<p>라이브 챗으로 메이크업 고민을 <br>아티스트와 상담하세요!</p>
+					</div>
+					<div class="tf_2">
+						<a href="#">
+							<dl>
+								<dt>고객센터</dt>
+								<dd>080 619 8888</dd>
+							</dl>
+						</a>
+						<p class="time">상담시간 09:00 ~ 18:00</p>
+						<p>(월~금, 공휴일 제외)</p>
+					</div>
+					<div class="tf_3">
+						<ul class="menu">
+							<li><a href="#">매장 찾기</a></li>
+							<li><a href="#">브랜드 소개</a></li>
+							<li><a href="#">멤버십</a></li>
+							<li><a href="#">사이트맵</a></li>
+						</ul>
+						<ul class="login clearfix">
+							<li><a href="#">로그인</a></li>
+							<li><a href="#">회원가입</a></li>
+						</ul>
 					</div>
 				</div>
-				<div class="bf bf_right">
-					<ul class="sns_nav clearfix">
-						<li class="insta"><a href="#">인스타그램</a></li>
-						<li class="facebook"><a href="#">페이스북</a></li>
-						<li class="twitter"><a href="#">트위터</a></li>
-						<li class="kakao"><a href="#">카카오톡</a></li>
-						<li class="blog"><a href="#">블로그</a></li>
-						<li class="mail"><a href="#">메일</a></li>
-					</ul>
-					<img src="img/icon_wa.png" alt="2018 웹 어워드" class="ico_wa">
+				<div class="bottom_foot clearfix">
+					<div class="bf bf_left">
+						<ul class="bf_menu">
+							<li><a href="#">서비스 이용약관</a></li>
+							<li class="bold"><a href="#">개인정보처리방침</a></li>
+							<li><a href="#">영상기기 관리방침</a></li>
+							<li><a href="#">사업자 정보 확인</a></li>
+							<li><a href="#">이메일 무단수집 거부</a></li>
+							<li><a href="#">전자공고</a></li>
+						</ul>
+						<div class="address">
+							<p>(주)에스쁘아 대표이사: 임중식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;본사 : 서울특별시 용산구 한강대로 100 (한강로2가) 6층</p>
+							<p>사업자번호: 104-86-58598&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고번호 : 제
+								2017-서울용산-1293호&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="check">사업자정보확인</a></p>
+							<p>개인정보보호책임자: 하태식&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;고객상담:
+								080-619-8888&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이메일:
+								espoirmall@espoir.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;호스팅제공자 : ㈜에스쁘아</p>
+							<p>고객님은 안전거래를 위해 현금 등으로 결제시 저희 쇼핑몰에서 가입한 이니시스 구매안전 서비스(에스크로)를 이용하실 수 있습니다.&nbsp;&nbsp;<a
+									href="#" class="check">서비스 가입사실 확인</a></p>
+							<p class="copy">Copyright ⓒ 2018 espoir. All Rights Reserved.</p>
+						</div>
+					</div>
+					<div class="bf bf_right">
+						<ul class="sns_nav clearfix">
+							<li class="insta"><a href="#">인스타그램</a></li>
+							<li class="facebook"><a href="#">페이스북</a></li>
+							<li class="twitter"><a href="#">트위터</a></li>
+							<li class="kakao"><a href="#">카카오톡</a></li>
+							<li class="blog"><a href="#">블로그</a></li>
+							<li class="mail"><a href="#">메일</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
