--- a/espoir/index.html
+++ b/espoir/index.html
@@ -686,6 +686,14 @@
 				</div>
 				<div class="bottom_foot clearfix">
 					<div class="bf bf_left">
+						<ul class="sns_nav sns_top clearfix">
+							<li class="insta"><a href="#">인스타그램</a></li>
+							<li class="facebook"><a href="#">페이스북</a></li>
+							<li class="twitter"><a href="#">트위터</a></li>
+							<li class="kakao"><a href="#">카카오톡</a></li>
+							<li class="blog"><a href="#">블로그</a></li>
+							<li class="mail"><a href="#">메일</a></li>
+						</ul>
 						<ul class="bf_menu">
 							<li><a href="#">서비스 이용약관</a></li>
 							<li class="bold"><a href="#">개인정보처리방침</a></li>
@@ -707,7 +715,7 @@
 						</div>
 					</div>
 					<div class="bf bf_right">
-						<ul class="sns_nav clearfix">
+						<ul class="sns_nav sns_bottom clearfix">
 							<li class="insta"><a href="#">인스타그램</a></li>
 							<li class="facebook"><a href="#">페이스북</a></li>
 							<li class="twitter"><a href="#">트위터</a></li>
