banner image change

--- a/espoir/index.html
+++ b/espoir/index.html
@@ -294,9 +294,12 @@
 	<section id="banner">
 		<div class="container">
 			<div class="slider">
-				<div><a href="#"><img src="img/IMG1592tuV980005176.jpg" alt="썸머 베이스 메이크업"></a></div>
-				<div><a href="#"><img src="img/IMG1592JwG811554656.jpg" alt="프로테일러 비글로우 쿠션 이벤트"></a></div>
-				<div><a href="#"><img src="img/IMG1592AXL891283755.jpg" alt="리얼 아이 팔레트 이벤트"></a></div>
+				<div class="bs1"></div>
+				<div class="bs2"></div>
+				<div class="bs3"></div>
+				<!-- <div class="bs1"><a href="#"><img src="img/IMG1592tuV980005176.jpg" alt="썸머 베이스 메이크업"></a></div>
+				<div class="bs2"><a href="#"><img src="img/IMG1592JwG811554656.jpg" alt="프로테일러 비글로우 쿠션 이벤트"></a></div>
+				<div class="bs3"><a href="#"><img src="img/IMG1592AXL891283755.jpg" alt="리얼 아이 팔레트 이벤트"></a></div> -->
 			</div>
 		</div>
 	</section>
