--- a/espoir/index.html
+++ b/espoir/index.html
@@ -446,7 +446,7 @@
 							<div class="img-box">
 								<a href="#">
 									<img src="img/real_review_1.png" alt="리얼리뷰1">
-									<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
+									<a href="#" class="tit">수퍼 소프트 페이스 브러쉬</a>
 								</a>
 								<span class="tit_s">수퍼 소프트 페이스 브러쉬</span>
 							</div>
@@ -469,7 +469,7 @@
 							<div class="img-box">
 								<a href="#">
 									<img src="img/real_review_2.png" alt="리얼리뷰2">
-									<a class="tit" href="#">노웨어 모이스트 허그</a>
+									<a href="#" class="tit">노웨어 모이스트 허그</a>
 								</a>
 								<span class="tit_s">브리스크</span>
 							</div>
@@ -488,7 +488,7 @@
 							<div class="img-box">
 								<a href="#">
 									<img src="img/real_review_3.png" alt="리얼리뷰3">
-									<a class="tit" href="#">수퍼 소프트 페이스 브러쉬</a>
+									<a href="#" class="tit">수퍼 소프트 페이스 브러쉬</a>
 								</a>
 								<span class="tit_s">피치 라이크</span>
 							</div>
