b_big image change

--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -139,7 +139,7 @@
 				<a href="#"><img src="img/coffeenie_sweet_pumpkin_banner.jpg" alt="단호박 음료 배너"></a>
 			</div>
 			<div>
-				<a href="#"><img src="img/b_big_3.jpg" alt="비비빅 음료 배너"></a>
+				<a href="#"><img src="img/b_big.jpg" alt="비비빅 음료 배너"></a>
 			</div>
 		</div>
 	</section>
