--- a/coffeenie/index.html
+++ b/coffeenie/index.html
@@ -49,13 +49,8 @@
 			</div>
 		</div>
 	</header>
-	<nav id="nav" class="m_nav">
+	<nav id="nav">
 		<h2 class="ir_su">전체 메뉴</h2>
-		<div class="nav_close">
-			<a href="#">
-				<span class="ir_pm">닫기 아이콘</span>
-			</a>
-		</div>
 		<div class="nav">
 			<ul>
 				<li>
@@ -104,6 +99,13 @@
 				</li>
 			</ul>
 			<div class="menuback"></div>
+		</div>
+		<div class="m_nav">
+			<div class="nav_close">
+				<a href="#">
+					<span class="ir_pm">닫기 아이콘</span>
+				</a>
+			</div>
 		</div>
 	</nav>
 	<section id="banner">
